# Quora-Question-Pairs

./: .env.example  .gitignore  README.md  catboost_thresh.py  cross_encode_quora.py  embed_quora.py  embed_quora_test.py  kaggle_submit.py  publish_results.sh  pyproject.toml  slurm_cpu.sh  slurm_gpu.sh  slurmscript.sh  submit.sh  thresholding.py
envs/: qwen_embedding.yml
experiments/: README.md  data.py  features.py  hyperparameter_tuning.py  report.py  results.dvc  run_experiment.py  tune.py  tune_deep.py
experiments/featurizers/: tfidf_pair.py
experiments/models/: __init__.py  catboost_model.py  cosine_baseline.py  ensemble_classical_model.py  ensemble_model.py  gru_model_v4.py  logreg_model.py  xgboost_classical.py  xgboost_model.py
experiments/tuning/: gru3params.json  lstm_best_params.json  xgboost_best_params.json
jupyter_server/: myjupyter.sh
