[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0.0",
    "dvc>=3.67.0",
    "flash-attn>=2.0.0",
    "numpy>=2.0.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "transformers>=4.51.0",
    "zarr>=3.0.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
